[gd_scene load_steps=11 format=2]

[ext_resource path="res://GUI/mainGUI.gd" type="Script" id=1]
[ext_resource path="res://icons/bookmark.png" type="Texture" id=2]
[ext_resource path="res://icons/open-book.png" type="Texture" id=3]
[ext_resource path="res://icons/info-brass.png" type="Texture" id=4]
[ext_resource path="res://icons/info-gold.png" type="Texture" id=5]
[ext_resource path="res://GUI/CameraDolly.gd" type="Script" id=6]

[sub_resource type="InputEventKey" id=1]

control = true
command = true
scancode = 83

[sub_resource type="ShortCut" id=2]

shortcut = SubResource( 1 )

[sub_resource type="InputEventAction" id=3]

action = "help"

[sub_resource type="ShortCut" id=4]

shortcut = SubResource( 3 )

[node name="mainGUI" type="Node2D"]
script = ExtResource( 1 )

[node name="DialogBoxes" type="CanvasLayer" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="SaveButton" type="TextureButton" parent="CanvasLayer"]
editor/display_folded = true
margin_left = 16.0
margin_top = 16.0
margin_right = 85.0
margin_bottom = 80.0
shortcut = SubResource( 2 )
texture_normal = ExtResource( 2 )
expand = true

[node name="SaveLabel" type="Label" parent="CanvasLayer/SaveButton"]
margin_left = -0.569901
margin_top = 65.7582
margin_right = 39.4301
margin_bottom = 79.7582
text = "Save (ctrl-s)"
align = 1

[node name="AppTitle" type="Label" parent="CanvasLayer"]
margin_left = 469.604
margin_top = 581.59
margin_right = 553.604
margin_bottom = 595.59
text = "Cactus Notes"

[node name="LoadButton" type="TextureButton" parent="CanvasLayer"]
editor/display_folded = true
margin_left = 105.025
margin_top = 12.7501
margin_right = 169.025
margin_bottom = 76.7501
texture_normal = ExtResource( 3 )
expand = true

[node name="Label" type="Label" parent="CanvasLayer/LoadButton"]
margin_left = 10.7248
margin_top = 62.76
margin_right = 50.7248
margin_bottom = 76.76
text = "Load"
align = 1

[node name="SaveDialog" type="FileDialog" parent="CanvasLayer"]
visible = true
margin_left = 64.0
margin_top = 128.0
margin_right = 900.0
margin_bottom = 512.0

[node name="LoadDialog" type="FileDialog" parent="CanvasLayer"]
visible = true
margin_left = 64.0
margin_top = 128.0
margin_right = 900.0
margin_bottom = 512.0
window_title = "Open a File"
mode = 0

[node name="HelpButton" type="TextureButton" parent="CanvasLayer"]
margin_left = 946.172
margin_top = 3.8689
margin_right = 1022.17
margin_bottom = 79.8689
focus_mode = 0
enabled_focus_mode = 0
shortcut = SubResource( 4 )
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 5 )
expand = true

[node name="CameraDolly" type="Position2D" parent="."]
script = ExtResource( 6 )

[connection signal="pressed" from="CanvasLayer/HelpButton" to="." method="_on_HelpButton_pressed"]
